<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/Blue"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="62dp"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:text="@string/rapidreturnexercise"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home"
            android:layout_width="67dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/home"
            android:textColor="@color/white"
            android:textSize="8dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="64dp"
        android:layout_toLeftOf="@+id/linearLayout3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/instructions"
            android:textColor="@color/white"
            
            android:typeface="monospace" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:src="@drawable/textxgeneric" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="286dp"
        android:layout_height="165dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@color/lightblue"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/shoulderroll"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/holder"
            android:clickable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/shoulderroll"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/armcircle"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/holder"
            android:clickable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/armcircle"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/armstretch"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/armstretch"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="165dp"
        android:layout_height="170dp"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginTop="38dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/video"
            android:textColor="@color/white"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tvvideoview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Black" />
      
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerInParent="true"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

         <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:text="@string/phase"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" 
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"></TextView>
        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="85dp"
            android:layout_height="35dp"
            
            android:background="@drawable/btn_toggle"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal" />
        

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="286dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="19dp"
        android:background="@drawable/holder"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/exercise"
        android:textColor="@color/white"
        android:typeface="monospace" />

</RelativeLayout>