<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:background="@color/Blue" >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="62dp"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:text="@string/massage"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home"
            android:layout_width="67dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/home"
            android:textColor="@color/white"
            android:textSize="8dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="64dp"
        android:layout_toLeftOf="@+id/linearLayout3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="29dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/instructions"
            android:textColor="@color/white"
            
          android:typeface="monospace" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/textxgeneric"
            android:background="@null"
            android:layout_gravity="center" />

    </LinearLayout>

   

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="165dp"
        android:layout_height="170dp"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginTop="38dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/video"
            android:textColor="@color/white"
            android:typeface="monospace" />
<TextView
            android:id="@+id/tvVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Black"
             />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="286dp"
        android:layout_height="190dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@color/lightblue"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/exercise1"
                    android:layout_width="256dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/holder"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/exercise1"
                    android:textColor="@color/white"
                    android:textSize="15dp" 
                    android:layout_gravity="center_horizontal|center_vertical"
                    />

                <TextView
                    android:id="@+id/exercise2"
                    android:layout_width="256dp"
                    android:layout_height="40dp"
                    android:background="@drawable/holder"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/exercise2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                     />
                
 <TextView
            android:id="@+id/exercise3"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/exercise3"
            android:textColor="@color/white"
            android:textSize="15dp" 
            android:layout_gravity="center_horizontal|center_vertical"
            />


        <TextView
            android:id="@+id/exercise4"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/holder"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/exercise4"
            android:textColor="@color/white"
            android:textSize="15dp" />
                     </LinearLayout>

        </ScrollView>

       

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerInParent="true"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="2dp"
             android:text="@string/phasetwo"
             android:textColor="@color/white"
             android:textSize="15dp"
             android:textStyle="bold" >
</TextView>

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_toggle"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="288dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout3"
        android:background="@drawable/holder"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/exercise"
        android:textColor="@color/white"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="168dp"
        android:layout_height="170dp"
        android:layout_above="@+id/textView8"
        android:layout_alignRight="@+id/linearLayout3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/video"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/holder"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/video"
            android:textColor="@color/white"
            android:typeface="monospace" />
    </LinearLayout>

    </RelativeLayout>