<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/darkblue" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/toolbar" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="87dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/disclaimer"
                android:textColor="@color/white"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="62dp"
                android:gravity="center"
                android:text="@string/palack"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@drawable/portada_text_selector"
            android:layout_marginBottom="162dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/phases"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
           
            android:background="@drawable/button"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@drawable/portada_text_selector"
            android:text="@string/rapid"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

    </RelativeLayout>
